--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 html {
-    background-color: green;
+    background-color: #eed285;
     font-size: 20px;
   }
   
   ul {
-    background: rgb(231, 238, 195);
+    background: #e9f0c9;
     padding: 10px;
     border: 1px solid black;
   }
